--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.0.4",
+    "@tanstack/react-query": "^5.40.1",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "react": "^18.2.0",
